# risk-aware-name-screening-service

./: .flake8  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/screening_service/: __init__.py  api.py  data_loader.py  decision.py  matching.py  schemas.py  service.py
src/screening_service/data/: watchlist.sample.json
tests/: README.md  test_api.py  test_data_loader.py  test_decision.py  test_matching.py  test_schemas.py  test_service.py
