[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-aware-name-screening-service"
version = "0.1.0"
description = "Synthetic watchlist loading for a risk-aware name screening MVP"
readme = "plan/plan_v1.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
screening_service = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
