[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "risk-aware-name-screening-service"
version = "0.1.0"
description = "Synthetic watchlist loading for a risk-aware name screening MVP"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "mypy>=2.1"
    ]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
screening_service = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
